@startuml systemstructure
!theme cerulean-outline
skinparam packageStyle folder

package CompanyManager.Common {
    package Contracts {
        interface ICompany {
            + Name : string
            + Address : string
            ---
            + CopyProperties(company : ICompany) : void
        }
        interface ICustomer {
            + CompanyId : int
            + Name : string
            + Email : string
            ---
            + CopyProperties(customer : ICustomer) : void
        }
        interface IEmployee {
            + CompanyId : int
            + FirstName : string
            + LastName : string
            + Email : string
            ---
            + CopyProperties(employee : IEmployee) : void
        }
        interface IIdentifiable {
            + Id : int
        }
        ICompany -|> IIdentifiable
        ICustomer -|> IIdentifiable
        IEmployee -|> IIdentifiable
    }
}

package CompanyManager.ConApp {
    class Program {

    }
}

package CompanyManager.Logic {
    package DataContext {
        class Factory {

        }
    }
}

CompanyManager.Logic --> CompanyManager.Common : imports
CompanyManager.ConApp --> CompanyManager.Common : imports
@enduml
